# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import contentPiecesRouter from "./content-pieces";
 import commentsRouter from "./comments";
 import dashboardRouter from "./dashboard";
 import foldersRouter from "./folders";
+import invitesRouter from "./invites";
 
 const router: IRouter = Router();
 
@@ -16,5 +17,6 @@ router.use(contentPiecesRouter);
 router.use(commentsRouter);
 router.use(dashboardRouter);
 router.use(foldersRouter);
+router.use(invitesRouter);
 
 export default router;
